bk_ida/gccida/c0/mems_conflict_for_gcse_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mems_conflict_for_gcse_p/src/gcse.c:1948:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mems_conflict_for_gcse_p/src/gcse.c:1948:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mems_conflict_for_gcse_p/src/obj/gcse.o] Error 1
